--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flappyabs",
+  "name": "server",
   "version": "0.1.0",
-  "description": "Flappy Ablett",
+  "description": "server",
   "main": "server.js",
   "dependencies": {
     "express": "^4.14.0"
